Semi-functional, cannot get the local storage to work although everything else seems fine

--- a/index.html
+++ b/index.html
@@ -30,13 +30,13 @@
       <!-- inserted moment.js for current time in desired format -->
     </header>
     <div class="container">
-      <div class="row" data-hour="9">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-9">
+        <label for="input-1" class="col-2 column-height">
           <h3>9A.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-1" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn">
+          <button class="saveBtn" id="save-button-1">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
@@ -44,13 +44,13 @@
           </button>
         </div>
       </div>
-      <div class="row" data-hour="10">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-10">
+        <label for="input-2" class="col-2 column-height">
           <h3>10A.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-2" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn">
+          <button class="saveBtn" id="save-button-2">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
@@ -58,13 +58,13 @@
           </button>
         </div>
       </div>
-      <div class="row" data-hour="11">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-11">
+        <label for="input-3" class="col-2 column-height">
           <h3>11A.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-3" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn">
+          <button class="saveBtn" id="save-button-3">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
@@ -72,13 +72,13 @@
           </button>
         </div>
       </div>
-      <div class="row" data-hour="12">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-12">
+        <label for="input-4" class="col-2 column-height">
           <h3>12P.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-4" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn">
+          <button class="saveBtn" id="save-button-4">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
@@ -86,13 +86,13 @@
           </button>
         </div>
       </div>
-      <div class="row" data-hour="13">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-13">
+        <label for="input-5" class="col-2 column-height">
           <h3>1P.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-5" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn">
+          <button class="saveBtn" id="save-button-5">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
@@ -100,13 +100,13 @@
           </button>
         </div>
       </div>
-      <div class="row" data-hour="14">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-14">
+        <label for="input-6" class="col-2 column-height">
           <h3>2P.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-6" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn">
+          <button class="saveBtn" id="save-button-6">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
@@ -114,13 +114,13 @@
           </button>
         </div>
       </div>
-      <div class="row" data-hour="15">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-15">
+        <label for="input-7" class="col-2 column-height">
           <h3>3P.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-7" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn">
+          <button class="saveBtn" id="save-button-7">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
@@ -128,13 +128,13 @@
           </button>
         </div>
       </div>
-      <div class="row" data-hour="16">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-16">
+        <label for="input-8" class="col-2 column-height">
           <h3>4P.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-8" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn">
+          <button class="saveBtn" id="save-button-8">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
@@ -142,13 +142,13 @@
           </button>
         </div>
       </div>
-      <div class="row" data-hour="17">
-        <label for="add-event" class="col-2 column-height">
+      <div class="row" id="hour-17">
+        <label for="input-9" class="col-2 column-height">
           <h3>5P.M.</h3>
         </label>
-        <textarea id="add-event" class="col-9 column-height"></textarea>
+        <textarea id="input-9" class="col-9 column-height"></textarea>
         <div class="col-1 column-height">
-          <button class="saveBtn" class="saveBtn">
+          <button class="saveBtn" id="save-button-9">
             <img
               src="assets/images/Actions-document-save-icon.png"
               alt="SAVE"
